<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_anxiety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_anxiety_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_hotline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_hotline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_hotline_text"
        app:layout_constraintBottom_toTopOf="@id/btn_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_anxiety" />

    <Button
        android:id="@+id/btn_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_space_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_paint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_hotline" />

    <Button
        android:id="@+id/btn_paint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_paint_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_covid19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_space" />

    <Button
        android:id="@+id/btn_covid19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_covid19_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_journal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_paint" />

    <Button
        android:id="@+id/btn_journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_journal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_covid19" />

</androidx.constraintlayout.widget.ConstraintLayout>