<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.celestialsnails.covid19.SpaceActivity"
    android:background="@color/colorBlack"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@mipmap/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTitle"
        android:textSize="55sp"
        app:layout_constraintStart_toEndOf="@id/silentTimerButton"
        app:layout_constraintEnd_toStartOf="@id/infoButton"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/silentTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@null"
        android:contentDescription="@string/timer_button_description"
        android:gravity="center"
        android:onClick="didTapTimerButton"
        android:src="@mipmap/clock"
        android:tag="0"
        android:text="@string/back"
        android:tint="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/appTitle"
        app:layout_constraintEnd_toStartOf="@id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/appTitle" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@null"
        android:contentDescription="@string/app_info_link"
        android:gravity="center"
        android:onClick="didTapInfoButton"
        android:src="@mipmap/info"
        android:tag="0"
        android:text="@string/back"
        android:tint="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/appTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/appTitle"
        app:layout_constraintTop_toTopOf="@id/appTitle" />

    <TextView
        android:id="@+id/pickASessionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickASession"
        android:textColor="@color/colorGrey"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickASessionTextView"
        app:layout_constraintBottom_toTopOf="@id/meditationTotalTimeTextView"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/buttonLinearLayout"
            >


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/meditationTotalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalTimePlaceholder"
        android:textColor="@color/colorGrey"
        android:textSize="17sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>